tests/golden/user-kubeconfig-server/capi-core/capi-core/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-cluster-api
  name: syn-cluster-api
