tests/golden/user-kubeconfig-server/capi-core/capi-core/20_user_kubeconfig_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    name: user-kubeconfig
  name: user-kubeconfig
  namespace: syn-cluster-api
spec:
  minReadySeconds: 30
  replicas: 1
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      name: user-kubeconfig
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        name: user-kubeconfig
    spec:
      containers:
        - args: []
          command:
            - caddy
            - run
            - --config
            - /data/caddy.json
          image: docker.io/caddy/caddy:2.11.6-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: caddy
          ports:
            - containerPort: 8000
              name: api
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            privileged: false
            seccompProfile:
              type: RuntimeDefault
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /data
              name: data
              readOnly: true
      imagePullSecrets: []
      initContainers: []
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
      serviceAccountName: user-kubeconfig
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 288
            name: user-kubeconfig
          name: data
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: user-kubeconfig
  name: user-kubeconfig
  namespace: syn-cluster-api
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    name: user-kubeconfig
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: user-kubeconfig
  name: user-kubeconfig
  namespace: syn-cluster-api
spec:
  rules:
    - host: kubeconfig.c-green-test-1234.example.com
      http:
        paths:
          - backend:
              service:
                name: user-kubeconfig
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kubeconfig.c-green-test-1234.example.com
      secretName: user-kubeconfig-tls
